<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"/>

    <ImageView
        android:id="@+id/img_camera_logo_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/storyapp_logo"
        android:src="@drawable/camera_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:alpha="0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/comfortaa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_camera_logo_login"/>

    <android.marc.com.storyapp.customview.EmailEditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:alpha="0"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:padding="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:inputType="textEmailAddress" />

    <android.marc.com.storyapp.customview.PasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password_hint"
        android:alpha="0"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:padding="15dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="15sp"
        android:padding="25dp"
        android:background="@drawable/rounded_button"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password"
        app:layout_constraintBottom_toTopOf="@id/tv_dont_have_account"/>

    <TextView
        android:id="@+id/tv_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/comfortaa"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_up"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/sign_up"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/comfortaa"
        android:textStyle="bold"
        android:textColor="@color/blue_purple"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/tv_dont_have_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_dont_have_account"/>


</androidx.constraintlayout.widget.ConstraintLayout>