...
    <string name="sign_up">Sign up</string>
    <string name="invalid_email_error">Email address is invalid</string>
    <string name="empty_email">Email is empty</string>
    <string name="empty_password">Password is empty</string>
    <string name="empty_name">Name is empty</string>
    <string name="invalid_password_error">Password must not less than 8 characters</string>
    <string name="success_dialog_title">Success!</string>
    <string name="success_dialog_upload_message">Story uploaded successfully.</string>
    <string name="success_dialog_login_message">Login success.</string>
    <string name="success_dialog_register_message">You have successfully register your account.</string>
    <string name="success_dialog_button">OK</string>
    <string name="error_dialog_title">Error!</string>
    <string name="error_dialog_login_message">Login failed. Please check your internet connection and make sure your email address &amp; password are correct.</string>
    <string name="error_dialog_register_message">Register failed. Please check your internet connection and make sure your email address &amp; password are valid inputs.</string>
    <string name="error_dialog_upload_message1">Upload story failed. Please choose the image first.</string>
    <string name="error_dialog_upload_message2">Upload story failed. Please check your internet connection and make sure to filled the description &amp; turn on the GPS if you want to add your location.</string>
    <string name="error_dialog_button">Try again</string>
    <string name="intent_gallery_title">Choose a Picture</string>
...
