<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/add_story"
        android:title="@string/add_story"
        android:icon="@drawable/ic_add_box"
        app:showAsAction="always"/>

    <item
        android:id="@+id/story_maps"
        android:title="@string/story_maps"
        android:icon="@drawable/ic_map"
        app:showAsAction="always"/>

    <item
        android:id="@+id/change_language"
        android:title="@string/change_language"
        android:icon="@drawable/ic_setting"
        app:showAsAction="always"/>

    <item
        android:id="@+id/logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"
        app:showAsAction="always"/>
</menu>